--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ packages = [
 python = "^3.10"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+isort = "^5.12.0"
+mypy = "^1.3.0"
+pyproject-flake8 = "^6.0.0.post1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
