--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,18 @@ pyproject-flake8 = "^6.0.0.post1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+
+[tool.flake8]
+exclude = '.venv,.git'
+max-line-length = 100
+
+[tool.isort]
+line_length = 100
+profile = "black"
+
+[tool.mypy]
+namespace_packages = true
+explicit_package_bases = true
