--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,12 @@ repos:
     -   id: check-toml
     -   id: check-yaml
     -   id: check-added-large-files
+-   repo: local
+    hooks:
+    -   id: black
+        name: Format python code by black
+        entry: .venv/bin/black
+        args:
+        -   .
+        language: system
+        pass_filenames: false
