--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,11 @@ repos:
         -   .
         language: system
         pass_filenames: false
+    -   id: mypy
+        name: Check python code by mypy
+        entry: .venv/bin/mypy
+        args:
+        -   --strict
+        -   .
+        language: system
+        pass_filenames: false
