Add pflake8 to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,8 @@ repos:
         -   .
         language: system
         pass_filenames: false
+    -   id: pflake8
+        name: Check python code by pflake8
+        entry: .venv/bin/pflake8
+        language: system
+        pass_filenames: false
