--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+grpcio = "^1.54.2"
+protobuf = "^4.23.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,6 +22,7 @@ black = "^23.3.0"
 isort = "^5.12.0"
 mypy = "^1.3.0"
 pyproject-flake8 = "^6.0.0.post1"
+grpcio-tools = "^1.54.2"
 
 [build-system]
 requires = ["poetry-core"]
