Generate gRPC codes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,5 +44,7 @@ repos:
         args:
         -   -mgrpc_tools.protoc
         -   -I.
+        -   --python_out=mine/_proto
+        -   --grpc_python_out=mine/_proto
         language: system
         files: .*\.proto
