--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ isort = "^5.12.0"
 mypy = "^1.3.0"
 pyproject-flake8 = "^6.0.0.post1"
 grpcio-tools = "^1.54.2"
+types-setuptools = "^67.8.0.0"
 
 [build-system]
 requires = ["poetry-core"]
