--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ mypy = "^1.3.0"
 pyproject-flake8 = "^6.0.0.post1"
 grpcio-tools = "^1.54.2"
 types-setuptools = "^67.8.0.0"
+grpc-stubs = "^1.53.0.2"
 
 
 [tool.poetry.group.test.dependencies]
